added components to toolbar

--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -8,6 +8,16 @@
   height: 100%;
 }
 
+.Login {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: column;
+  /* align-items: center; */
+  height: 100%;
+}
+
 @media (min-width: 500px) {
   .NavigationItems {
     flex-flow: row;
