--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,11 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: url(/public/img/homepage.jpeg) no-repeat;
+  background: url(/public/img/mario-bg.png) no-repeat;
   background-size: 100%;
   background-position: bottom;
   background-color: #09263a;
   min-height: 100%;
-
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 form {
