--- a/src/containers/Book/Book.module.css
+++ b/src/containers/Book/Book.module.css
@@ -1,5 +1,5 @@
 
-.date {
+/* .date {
   margin: 10px;
   margin-left: -800px;
   
@@ -19,4 +19,4 @@
   color: #95a5a6;
   box-shadow: none;
   
-}
+} */
