--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -2,11 +2,13 @@
   margin: 10px 0;
   box-sizing: border-box;
   display:block;
+  /* border: 1px black solid; */
+  height: 80px;
   width: 100%;
 }
 
 .NavigationItem a {
-  color: #8F5C2C;
+  color: rgb(39, 1, 88);
   text-decoration: none;
   width: 100%;
   box-sizing: border-box;
@@ -16,7 +18,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-  color: #40A4CB;
+  color: rgb(113, 64, 203);
 }
 
 @media (min-width: 500px) {
@@ -31,14 +33,14 @@
   .NavigationItem a {
     color: white;
     height: 100%;
-    padding: 16px 10px;
+    padding: 3px 18spx;
     border-bottom: 4px solid transparent;
   }
   
   .NavigationItem a:hover,
   .NavigationItem a:active,
   .NavigationItem a.active {
-    background-color: rgb(56, 70, 155);
+    background-color: rgb(54, 64, 129);
     border-bottom: 4px solid #40A4CB;
     color: rgb(255, 255, 255);
   }
