--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -1,24 +1,24 @@
 .Toolbar {
-  height: 84px;
+  height: 78px;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgb(23, 28, 117);
+  background-color: rgb(40, 1, 71);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
   box-sizing: border-box;
-  z-index: 90;
+  z-index: 50;
 }
 
 .Toolbar nav {
-  height: 100%;
+  height: 88%;
 }
 
 @media (max-width: 499px) {
   .DesktopOnly {
-    display: none;
+      flex-flow: row;
   }
 }
