--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -11,6 +11,8 @@
   padding: 0 20px;
   box-sizing: border-box;
   z-index: 50;
+  font-family: 'Courgette';
+  text-shadow: 1px 1px 1px purple;
 }
 
 .Toolbar nav {
