--- a/src/containers/Book/Book.module.css
+++ b/src/containers/Book/Book.module.css
@@ -17,4 +17,8 @@
 
 .formBounds {
   width: 50%;
+  margin: auto;
+  border: 2px solid fuchsia;
+  box-shadow: 2px 2px 7px midnightblue;
+  border-radius: 15px;
 }
