--- a/src/containers/About/About.module.css
+++ b/src/containers/About/About.module.css
@@ -15,5 +15,13 @@
   width: 75%;
   border: 2px solid fuchsia;
   border-radius: 15px;
-  box-shadow: 2px 2px 8px midnightblue;
+  box-shadow: 4px 4px 8px midnightblue;
+  font-size: 20px;
+}
+
+.Picture1 {
+  border: 4px solid darkorchid;
+  border-radius: 50px;
+  box-shadow: 4px 0px 7px darkmagenta;
+  margin: 15px;
 }
