--- a/src/containers/Book/Book.module.css
+++ b/src/containers/Book/Book.module.css
@@ -22,3 +22,20 @@
   box-shadow: 2px 2px 7px midnightblue;
   border-radius: 15px;
 }
+
+.TimeSlotsTitle {
+  font-family: 'Courgette';
+  font-size: 18px;
+  color:cyan;
+  text-shadow: 0px 1px azure;
+  opacity: 70%;
+  background-color: midnightblue;
+  border-radius: 5px;
+  width: 85%;
+  display: inline-block;
+  height: 28px;
+}
+
+.TimeSlots {
+
+}
