--- a/src/containers/Book/Book.module.css
+++ b/src/containers/Book/Book.module.css
@@ -21,6 +21,7 @@
   border: 2px solid fuchsia;
   box-shadow: 2px 2px 7px midnightblue;
   border-radius: 15px;
+  background-color: azure;
 }
 
 .TimeSlotsTitle {
