--- a/src/containers/About/About.module.css
+++ b/src/containers/About/About.module.css
@@ -20,6 +20,13 @@
 }
 
 .Picture1 {
+  height: 400px;
+  width: 400px;
+  float: right;
+  background-image: url("../../assets/img/profilePic.jpg");
+  background-size: 500px 500px;
+  background-position-x: -100px;
+  background-repeat: no-repeat;
   border: 4px solid darkorchid;
   border-radius: 50px;
   box-shadow: 4px 0px 7px darkmagenta;
