--- a/src/containers/Login/Signup.module.css
+++ b/src/containers/Login/Signup.module.css
@@ -5,6 +5,7 @@
   border: solid 2px cadetblue;
   box-shadow: 2px 2px 8px midnightblue;
   font-family: 'Courgette';
+  background-color: azure;
 }
 
 .displayName {
